--- a/paper/main/library.bib
+++ b/paper/main/library.bib
@@ -960,7 +960,7 @@
    year = {2023}
 }
 
-@software{Schwertfeger_2024,
+@misc{Schwertfeger_2024,
   author       = {Benjamin T. Schwertfeger},
   title        = {btschwertfeger/python-cmethods: v2.3.0},
   month        = Jun,
@@ -993,4 +993,27 @@
    year = {2018},
    type = {Book Section},
    pages = 58
+}
+
+@article{Trapp_GRL_2009,
+   author = {Trapp, Robert J. and Diffenbaugh, Noah S. and Gluhovsky, Alexander},
+   title = {Transient response of severe thunderstorm forcing to elevated greenhouse gas concentrations},
+   journal = GRL,
+   volume = {36},
+   number = {1},
+   pages = {L01703},
+   DOI = {10.1029/2008GL036203},
+   year = {2009}
+}
+
+@article{Gensini_npjCAS_2024,
+   author = {Gensini, Vittorio A. and Ashley, Walker S. and Michaelis, Allison C. and Haberlie, Alex M. and Goodin, Jillian and Wallace, Brendan C.},
+   title = {Hailstone size dichotomy in a warming climate},
+   journal = npjCAS,
+   volume = {7},
+   number = {1},
+   pages = {185},
+   ISSN = {2397-3722},
+   DOI = {10.1038/s41612-024-00728-9},
+   year = {2024}
 }
