--- a/paper/supplementary/sup_mat.Rnw
+++ b/paper/supplementary/sup_mat.Rnw
@@ -39,31 +39,6 @@ library(tidyverse)
 library(xtable)
 @
 
-\section{Update to hail proxy}
-\label{sec:proxy-update}
-
-The instability-shear proxy of \cite{Raupach_MWR_2023} was slightly updated for this study, to be more globally applicable. This proxy indicates hail-prone conditions when
-
-\begin{equation}
-    \textrm{CAPE} \times {\textrm{S}_{06}}^\alpha \geq \beta,
-\end{equation}
-
-where CAPE is convective available potential energy, S$_{06}$ is 0-6 km bulk vertical wind shear, and $\alpha$ and $\beta$ are parameters that vary with the melting level height \citep{Raupach_MWR_2023}. Figure \ref{fig:proxy_by_MLH} shows the \cite{Raupach_MWR_2023} proxy discriminator lines for various values of melting level height (MLH) above the surface. When the MLH is below about 1500 m, the value of $\alpha$ becomes negative and the value of $\beta$ becomes very small, and the proxy stops detecting high-CAPE, high-shear conditions.
-
-\begin{figure*}[h!]
-    \centering
-    \includegraphics[width=\textwidth]{../../results/supplementary/proxy_by_MLH}
-    \caption{\textbf{Original proxy for various values of melting level height (MLH).} CAPE stands for convective available potential energy. $S_{06}$ is 0-6 km bulk vertical wind shear. The same discriminator lines are shown on logarithmic and linear scales.}
-    \label{fig:proxy_by_MLH}
-\end{figure*}
-
-So that the proxy is more reliable in colder regions, in this work we have modified the proxy such that when the MLH is below 2000 m, the values of $\alpha$ and $\beta$ for an MLH of 2000 m are used. With and without this modification the three original ``extra conditions'' defined in \cite{Raupach_MWR_2023} are similarly effective in removing false positives from the whole proxy training data set. We thus use these unmodified conditions. To assess the impact of this change we have tested on two datasets:
-
-\begin{enumerate}
-    \item On the original training dataset from \cite{Raupach_MWR_2023}, proxy performance metrics for the proxy with no extra conditions are similar between versions while the performance of the proxy with extra conditions is not affected by the change.
-    \item On the climatology data used in \cite{Raupach_npjCAS_2023} covering storm-prone hours of the day from 1979-2022 across all of Australia, the proxy changes affect the ocean areas in the south and southeast of the domain. However, over the whole map no location had more than \Sexpr{ceiling(results_proxy_update$max_percent_diff_per_pixel_all*100)/100}\% \% of its values affected and over land no location had more than \Sexpr{ceiling(results_proxy_update$max_percent_diff_per_pixel_land*100)/100}\% of its values affected. The climatology and trends calculated using either version of the proxy are very similar.
-\end{enumerate}
-
 \section{Supplementary tables and figures}
 
 <<runsTable, echo=FALSE, results="asis">>=
@@ -93,7 +68,7 @@ print(tab, booktabs=TRUE, include.rownames=FALSE, size='footnotesize')
 \begin{figure*}[p]
     \centering
     \includegraphics[width=\textwidth]{../../results/supplementary/monthly_anoms_India_2015}
-    \caption{\textbf{Monthly proxy-based hail-prone day anomalies for the Indian region in 2015.} Anomalies are calculated using ERA5 data with respect to the monthly ERA5 historical climatology (1980-1999).}
+    \caption{\textbf{Monthly multi-proxy mean hail-prone day anomalies for the Indian region in 2015.} Anomalies are calculated using ERA5 data with respect to the monthly ERA5 historical climatology (1980-1999), figure shows multi-proxy mean anomalies.}
     \label{fig:anoms_India_2015}
 \end{figure*}
 
@@ -130,7 +105,7 @@ print(tab, booktabs=TRUE, include.rownames=FALSE, size='footnotesize')
     \includegraphics[width=0.96\textwidth]{../../results/supplementary/ingredients_changes_shear}
     \includegraphics[width=0.98\textwidth]{../../results/supplementary/ingredients_changes_cin}
     \includegraphics[width=0.98\textwidth]{../../results/supplementary/ingredients_changes_lifted_index}
-    \caption{\textbf{Multimodel mean differences in hail ingredients by epoch.} Ingredients shown are annual extreme (99th percentile) convective available potential energy (CAPE), annual extreme (99th percentile) 0-6 km bulk wind shear (S06), annual extreme (1st percentile) convective inhibition (CIN), and annual extreme (1st percentile) lifted index. Stippling as for Supplementary Figure \ref{fig:hail_changes_by_season}. \todo{Make projections consistent}}
+    \caption{\textbf{Multimodel mean differences in hail ingredients by epoch.} Ingredients shown are annual extreme (99th percentile) convective available potential energy (CAPE), annual extreme (99th percentile) 0-6 km bulk wind shear (S06), annual extreme (1st percentile) convective inhibition (CIN), and annual extreme (1st percentile) lifted index. Stippling as for Supplementary Figure \ref{fig:hail_changes_by_season}.}
     \label{fig:ingredients_changes_1}
 \end{figure*}
 
@@ -139,7 +114,7 @@ print(tab, booktabs=TRUE, include.rownames=FALSE, size='footnotesize')
     \includegraphics[width=\textwidth]{../../results/supplementary/ingredients_changes_mlh}
     \includegraphics[width=\textwidth]{../../results/supplementary/ingredients_changes_temp}
     \includegraphics[width=\textwidth]{../../results/supplementary/ingredients_changes_lapse_rate}
-    \caption{As for Supplementary Figure \ref{fig:ingredients_changes_1} but for annual mean melting level height (MLH), annual mean temperature at 500 hPa ($T_{500}$), and annual mean lapse rate (LR). To increase contrast the colour scale for LR is truncated. \todo{Make projections consistent}}
+    \caption{As for Supplementary Figure \ref{fig:ingredients_changes_1} but for annual mean melting level height (MLH), annual mean temperature at 500 hPa ($T_{500}$), and annual mean lapse rate (LR). To increase contrast the colour scale for LR is truncated.}
     \label{fig:ingredients_changes_2}
 \end{figure*}
 
@@ -210,17 +185,18 @@ print(tab, booktabs=TRUE, include.rownames=FALSE, size='footnotesize')
     \centering
     \includegraphics[width=\textwidth]{../../results/supplementary/crop_lines_af}
     \includegraphics[width=\textwidth]{../../results/supplementary/crop_lines_as}
-    \includegraphics[width=\textwidth]{../../results/supplementary/crop_lines_au}
-    \caption{\textbf{Changes affecting crops at point locations.} \todo{Fix widths. Add case study locations. Chris writes: ``In case you add India to Suppl Figure 19, better check the wheat and rice cropping periods. MIRCA has split these crops evenly among the two main seasons in northern India - the two main crops, which is wrong (I might have mentioned before). Wheat growing season should (only) be from Nov-Apr  in Punjab, Uttar Pradesh and Haryana. Harvest starts in March but in many regions extends into April, especially when winter has been colder than usual and the crop takes longer to grow. I can imagine this would expose a much higher fraction to hail risk. Rice is grown primarily from Jul-Oct.''}}
+    \includegraphics[width=0.99\textwidth]{../../results/supplementary/crop_lines_au}
+    \caption{\textbf{Changes affecting crops at point locations.} ``Peanuts'' is short for ``Groundnuts / Peanuts'', and ``Fodder'' is short for ``Fodder grasses''.}
     \label{fig:crop_lines_1}
 \end{figure*}
 
 \begin{figure*}[p]
     \centering
-    \includegraphics[width=\textwidth]{../../results/supplementary/crop_lines_ca}
+    \includegraphics[width=0.975\textwidth]{../../results/supplementary/crop_lines_ca}
     \includegraphics[width=\textwidth]{../../results/supplementary/crop_lines_eu}
     \includegraphics[width=\textwidth]{../../results/supplementary/crop_lines_nz}
-    \caption{\textbf{Changes affecting crops at point locations.} \todo{Fix widths. Add case study locations.}}
+    \includegraphics[width=0.96\textwidth]{../../results/supplementary/crop_lines_india}
+    \caption{\textbf{Changes affecting crops at point locations.} ``Fodder'' is short for ``Fodder grasses''.}
     \label{fig:crop_lines_2}
 \end{figure*}
 
@@ -230,8 +206,6 @@ print(tab, booktabs=TRUE, include.rownames=FALSE, size='footnotesize')
     \caption{\textbf{Drivers of changes across models.} Rows show de-biased ingredients: freezing level height (FLH), lapse rate (LR), melting level height (MLH), mixed-layer CAPE (MLCAPE), mixed-layer CIN (MLCIN), deep convective index (DCI), lifted index (LI), most-unstable CAPE (MUCAPE), most-unstable CIN (MUCIN), most-unstable mixing ratio (MUMR), 0-6 km bulk shear (S06), and temperature at 500 hPa (T500).}
     \label{fig:drivers}
 \end{figure*}
-
-
 
 \begin{figure*}[p]
     \centering
@@ -248,6 +222,32 @@ print(tab, booktabs=TRUE, include.rownames=FALSE, size='footnotesize')
     the reference period, in SSP5-8.5 simulations, are in orange and green respectively.}
     \label{fig:epochs}
 \end{figure*}
+
+
+\section{Update to hail proxy}
+\label{sec:proxy-update}
+
+The instability-shear proxy of \cite{Raupach_MWR_2023} was slightly updated for this study, to be more globally applicable. This proxy indicates hail-prone conditions when
+
+\begin{equation}
+    \textrm{CAPE} \times {\textrm{S}_{06}}^\alpha \geq \beta,
+\end{equation}
+
+where CAPE is convective available potential energy, S$_{06}$ is 0-6 km bulk vertical wind shear, and $\alpha$ and $\beta$ are parameters that vary with the melting level height \citep{Raupach_MWR_2023}. Figure \ref{fig:proxy_by_MLH} shows the \cite{Raupach_MWR_2023} proxy discriminator lines for various values of melting level height (MLH) above the surface. When the MLH is below about 1500 m, the value of $\alpha$ becomes negative and the value of $\beta$ becomes very small, and the proxy stops detecting high-CAPE, high-shear conditions.
+
+\begin{figure*}[!ht]
+    \centering
+    \includegraphics[width=\textwidth]{../../results/supplementary/proxy_by_MLH}
+    \caption{\textbf{Original proxy for various values of melting level height (MLH).} CAPE stands for convective available potential energy. $S_{06}$ is 0-6 km bulk vertical wind shear. The same discriminator lines are shown on logarithmic and linear scales.}
+    \label{fig:proxy_by_MLH}
+\end{figure*}
+
+So that the proxy is more reliable in colder regions, in this work we have modified the proxy such that when the MLH is below 2000 m, the values of $\alpha$ and $\beta$ for an MLH of 2000 m are used. With and without this modification the three original ``extra conditions'' defined in \cite{Raupach_MWR_2023} are similarly effective in removing false positives from the whole proxy training data set. We thus use these unmodified conditions. To assess the impact of this change we have tested on two datasets:
+
+\begin{enumerate}
+    \item On the original training dataset from \cite{Raupach_MWR_2023}, proxy performance metrics for the proxy with no extra conditions are similar between versions while the performance of the proxy with extra conditions is not affected by the change.
+    \item On the climatology data used in \cite{Raupach_npjCAS_2023} covering storm-prone hours of the day from 1979-2022 across all of Australia, the proxy changes affect the ocean areas in the south and southeast of the domain. However, over the whole map no location had more than \Sexpr{ceiling(results_proxy_update$max_percent_diff_per_pixel_all*100)/100}\% \% of its values affected and over land no location had more than \Sexpr{ceiling(results_proxy_update$max_percent_diff_per_pixel_land*100)/100}\% of its values affected. The climatology and trends calculated using either version of the proxy are very similar.
+\end{enumerate}
 
 \clearpage
 \footnotesize
